log
Wed 20 Mar 2024 10:58:01 PM UTC: 
 tests:  0|5
total_score: 0/70
75e2e4d
Wed 20 Mar 2024 11:26:53 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|4
total_score: 10/70
619f176
Wed 20 Mar 2024 11:30:32 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
aa37bcb
Wed 20 Mar 2024 11:35:00 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
5592a7e
Wed 20 Mar 2024 11:38:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
d7fd70a
Wed 20 Mar 2024 11:43:28 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:16: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  103 |   Stack* aux = createStack();
      |                ^~~~~~~~~~~
      |                create_stack
exercises.c:103:16: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
5a8c9d6
